--- a/index.html
+++ b/index.html
@@ -71,5 +71,8 @@
             </th>
         </tr>
         </table>
+    <hr>
+        <P style="text-align: right;">created by <br>
+        ALLURI HEMASAIESHA</p>
   </body>
 </html>
